--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "wayfarer",
   "version": "1.0.0",
-  "description": "",
+  "description": "A public bus transportation booking server",
   "main": "server.js",
   "scripts": {
     "dev": "nodemon --exec babel-node ./src/server.js",
     "start": "node src/server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrations": "babel-node ./src/db/migrations.js --env"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,14 @@
   "homepage": "https://github.com/AbonyiXavier/WayFarer#readme",
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
+    "gravatar": "^1.8.0",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^7.11.0"
   },
