--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
     "pg": "^7.11.0"
   },
   "devDependencies": {
