--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon --exec babel-node ./src/server.js",
-    "start": "node src/server",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "migrations": "babel-node ./src/db/migrations.js --env"
+    "lint": "eslint src/  --fix",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel ./src --out-dir ./build",
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/server.js",
+    "migrations": "babel-node ./src/db/migrations.js --env",
+    "test": "cross-env NODE_ENV=test npm run migrations && cross-env NODE_ENV=test nyc --reporter=text --reporter=html mocha --require @babel/register src/test --timeout 10000 --exit",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -23,12 +28,15 @@
     "@babel/polyfill": "^7.2.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
-    "express": "^4.17.1",
+    "express": "^4.16.4",
     "gravatar": "^1.8.0",
-    "joi": "^14.3.1",
+    "joi": "^14.3.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
@@ -41,11 +49,34 @@
     "@babel/preset-env": "^7.2.2",
     "@babel/register": "^7.0.0",
     "babel-plugin-istanbul": "^5.1.0",
+    "coveralls": "^3.0.3",
     "cross-env": "^5.2.0",
     "eslint": "^5.11.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "istanbul": "^0.4.5",
-    "nodemon": "^1.18.9"
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.18.9",
+    "nyc": "^13.1.0"
+  },
+  "engines": {
+    "node": "10.5.0"
+  },
+  "standard": {
+    "env": [
+      "mocha"
+    ]
+  },
+  "nyc": {
+    "require": [
+      "@babel/register",
+      "@babel/polyfill"
+    ],
+    "reporter": [
+      "lcov",
+      "text"
+    ],
+    "sourceMap": false,
+    "instrument": false
   }
 }
